# VWO

./: .gitmodules  README.md  flir_24392822.yaml
src/VWO/: CMakeLists.txt  package.xml
src/VWO/config/: 4_37mm.yaml  4_8mm.yaml  5_37mm.yaml  5_8mm.yaml  flir_24392822.yaml
src/VWO/include/VWO/: VWO_node.h  VWO_node.hpp  common.hpp  config.hpp  feature_extractor.hpp  main.h  main.hpp  orb_extractor.hpp  orb_impl.hpp  orb_params.hpp  orb_point_pairs.hpp  system.h  system.hpp
src/VWO/include/VWO/camera/: camera.h  camera.hpp  perspective.h  perspective.hpp
src/VWO/include/VWO/data/: bow_database.h  bow_vocabulary.h  bow_vocabulary_fwd.h  camera_database.h  common.h  common.hpp  frame.h  frame.hpp  frame_observation.h  frame_observation.hpp  frame_statistics.h  graph_node.h  keyframe.h  keyframe.hpp  landmark.h  landmark.hpp  map_database.h  orb_params_database.h
src/VWO/include/VWO/feature/: orb_extractor.h  orb_extractor.hpp
src/VWO/include/VWO/initialize/: base.h  perspective.h
src/VWO/include/VWO/match/: area.h  area.hpp  base.hpp
src/VWO/include/VWO/module/: initializer.h  initializer.hpp
src/VWO/include/VWO/optimize/: global_bundle_adjuster.h  terminate_action.h
src/VWO/include/VWO/optimize/internal/: landmark_vertex.h  landmark_vertex_container.h
src/VWO/include/VWO/optimize/internal/se3/: perspective_reproj_edge.h  reproj_edge_wrapper.h  shot_vertex.h  shot_vertex_container.h  wheel_odom_edge.h  wheel_odom_edge_wrapper.h
src/VWO/include/VWO/solve/: common.h  essential_5pt.h  essential_solver.h  fundamental_solver.h  homography_solver.h  triangulator.h
src/VWO/include/VWO/tracking/: tracking_module.h  tracking_module.hpp
src/VWO/include/VWO/util/: angle.h  converter.h  random_array.h  sqlite3.h  trigonometric.hpp  yaml.hpp
src/VWO/include/util/: converter.hpp
src/VWO/launch/: VWO_node.launch  VWO_rviz.rviz
src/VWO/src/: VWO_node.cpp  config.cpp  feature_extractor.cpp  main.cpp  orb_extractor.cpp  orb_impl.cpp  orb_params.cpp  system.cpp
src/VWO/src/camera/: camera.cpp  perspective.cpp
src/VWO/src/data/: bow_database.cc  bow_vocabulary.cc  camera_database.cc  common.cpp  frame.cpp  frame_statistics.cc  graph_node.cc  keyframe.cpp  landmark.cpp  map_database.cc  orb_params_database.cc
src/VWO/src/feature/: feature_extractor.cpp  orb_extractor.cpp  orb_impl.cpp  orb_params.cpp
src/VWO/src/initialize/: base.cpp  perspective.cpp
src/VWO/src/match/: area.cpp
src/VWO/src/module/: initializer.cpp
src/VWO/src/optimize/: global_bundle_adjuster.cc  terminate_action.cc
src/VWO/src/solve/: common.cpp  essential_solver.cpp  fundamental_solver.cpp  homography_solver.cpp
src/VWO/src/tracking/: tracking_module.cpp
src/VWO/src/util/: angle.cpp  converter.cpp  random_array.cpp  sqlite3.cc
src/convert_comimg_to_img/: CMakeLists.txt  package.xml
src/convert_comimg_to_img/src/: main.cpp
